Manage logger correctly and FXML loading too

--- a/org.jrebirth/core/.settings/org.sonar.ide.eclipse.core.prefs
+++ b/org.jrebirth/core/.settings/org.sonar.ide.eclipse.core.prefs
@@ -1,5 +1,5 @@
-#Sat Oct 08 17:36:07 CEST 2011
-analyseLocally=false
+#Fri Feb 24 21:54:54 CET 2012
+analyseLocally=true
 eclipse.preferences.version=1
 projectArtifactId=core
 projectBranch=
