Add Maven Archetype for sample JRebirth porject

--- a/org.jrebirth/pom.xml
+++ b/org.jrebirth/pom.xml
@@ -27,6 +27,7 @@
 	<modules>
 		<module>core</module>
 		<module>analyzer</module>
+		<module>archetype</module>
 		<module>distribution</module>
 	</modules>
 
