--- a/org.jrebirth/core/pom.xml
+++ b/org.jrebirth/core/pom.xml
@@ -6,9 +6,11 @@
 		<version>0.5.0-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
+	
 	<groupId>org.jrebirth</groupId>
 	<artifactId>core</artifactId>
 	<name>JRebirth Core Library</name>
+	<description>The Core library of the JRebirth Framework</description>
 
 	<dependencies>
 		<dependency>
