--- a/org.jrebirth/archetype/pom.xml
+++ b/org.jrebirth/archetype/pom.xml
@@ -8,9 +8,10 @@
 		<relativePath>..</relativePath>
 	</parent>
 
-	<groupId>org.jrebirth.archetypes</groupId>
-	<artifactId>application</artifactId>
+	<groupId>org.jrebirth</groupId>
+	<artifactId>archetype</artifactId>
 	<version>0.5.0-SNAPSHOT</version>
+	
 	<name>JRebirth Application Archetype</name>
 	<description>JRebirth Archetype used to build a new fresh application</description>
 
