Update archetype to make it ready to run & deploy

--- a/org.jrebirth/archetype/src/main/resources/archetype-resources/pom.xml
+++ b/org.jrebirth/archetype/src/main/resources/archetype-resources/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -6,10 +7,10 @@
 	<version>${version}</version>
 	<packaging>jar</packaging>
 
-	<name>A JavaFX 2.0 application built with JRebirth</name>
+	<name>Sample Application</name>
 	<url>http://www.jrebirth.org</url>
-	<description>A JRebirth Sample Application</description>
-	
+	<description>A JavaFX 2.0 application built with JRebirth</description>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -19,11 +20,10 @@
 		<url>http://www.jrebirth.org</url>
 	</organization>
 
-	
+
 	<build>
 		<resources>
 			<resource>
-				<filtering>false</filtering>
 				<directory>${basedir}/src/main/java</directory>
 				<includes>
 					<include>**/*.fxml</include>
@@ -31,14 +31,13 @@
 				</includes>
 			</resource>
 			<resource>
-				<filtering>false</filtering>
 				<directory>${basedir}/src/main/resources</directory>
 				<includes>
 					<include>**/*.*</include>
 				</includes>
 			</resource>
 		</resources>
-		
+
 		<plugins>
 
 			<plugin>
@@ -51,7 +50,7 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
@@ -63,24 +62,19 @@
 					<archive>
 						<manifestEntries>
 							<JavaFX-Version>2.0</JavaFX-Version>
-							<Main-Class>org.jrebirth.sample.SampleApplication</Main-Class>
+							<Main-Class>${groupId}.${artifactId}.SampleApplication</Main-Class>
 							<implementation-vendor>You</implementation-vendor>
 							<implementation-title>SampleApplication</implementation-title>
 							<implementation-version>1.0</implementation-version>
-							<JavaFX-Application-Class>org.jrebirth.org.sample.SampleApplication</JavaFX-Application-Class>
-							<JavaFX-Class-Path>presentation-0.4.0-SNAPSHOT.jar core-0.4.0.jar</JavaFX-Class-Path>
-							<!-- implementation-vendor: I implementation-title: Jrebirth demo implementation-version: 1.0 JavaFX-Application-Class: org.jrebirth.demo.JRebirthDemo Created-By: 
-								Maven Packager Main-Class: com/javafx/main/Main -->
+							<JavaFX-Application-Class>${groupId}.${artifactId}.SampleApplication</JavaFX-Application-Class>
+
+							<JavaFX-Class-Path>${artifactId}-${version}.jar core-0.4.0.jar</JavaFX-Class-Path>
 						</manifestEntries>
 						<manifest>
-							<!-- <addDefaultImplementationEntries>true</addDefaultImplementationEntries> <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries> -->
 							<addClasspath>true</addClasspath>
 
 						</manifest>
 					</archive>
-					<!-- <keystore>jrebirth.jks</keystore> <alias>jrebirth</alias> <storepass>gojava</storepass> <signedjar>${project.build.directory}/signed/${project.build.finalName}.jar</signedjar> 
-						<verify>true</verify> -->
-
 				</configuration>
 			</plugin>
 
@@ -93,7 +87,7 @@
 
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>webstart-maven-plugin</artifactId>
-				<version>1.0-beta-3-SNAPSHOT</version>
+				<version>1.0-beta-3</version>
 
 				<!-- do not bind to install phase - - > <executions> <execution> <goals> <goal>package</goal> </goals> </execution> </executions> -->
 
@@ -130,7 +124,7 @@
 
 						<!-- used to automatically identify the jar containing the main class. -->
 						<!-- this is perhaps going to change -->
-						<mainClass>org.jrebirth.sample.SampleApplication</mainClass>
+						<mainClass>${groupId}.${artifactId}.SampleApplication</mainClass>
 					</jnlp>
 
 
@@ -143,15 +137,23 @@
 						<!--storetype>fillme</storetype -->
 						<alias>jrebirth</alias>
 
-						<!--validity>fillme</validity -->
+						<validity>180</validity>
 
 						<!-- only required for generating the keystore -->
-						<!--dnameCn>fillme</dnameCn> <dnameOu>fillme</dnameOu> <dnameO>fillme</dnameO> <dnameL>fillme</dnameL> <dnameSt>fillme</dnameSt> <dnameC>fillme</dnameC -->
+						<dnameCn>www.jrebirth.org</dnameCn>
+						<dnameOu>None</dnameOu>
+						<dnameO>JRebirth</dnameO>
+						<dnameL>Toulouse</dnameL>
+						<dnameSt></dnameSt>
+						<dnameC>France</dnameC>
 
 						<verify>true</verify> <!-- verify that the signing operation succeeded -->
 
 						<!-- KEYSTORE MANAGEMENT -->
-						<!-- <keystoreConfig> <delete>true</delete> delete the keystore <gen>true</gen> optional shortcut to generate the store. </keystoreConfig> -->
+						<keystoreConfig>
+							<delete>true</delete> <!-- delete the keystore -->
+							<gen>true</gen> <!-- optional shortcut to generate the store. -->
+						</keystoreConfig>
 					</sign>
 
 					<!-- BUILDING PROCESS -->
@@ -176,7 +178,7 @@
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>core</artifactId>
-			<version>0.4.0</version>
+			<version>0.5.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
@@ -185,7 +187,7 @@
 			<scope>provided</scope>
 			<version>2.0.2</version>
 		</dependency>
-		
+
 	</dependencies>
 
 
