--- a/org.jrebirth/core/.settings/org.sonar.ide.eclipse.core.prefs
+++ b/org.jrebirth/core/.settings/org.sonar.ide.eclipse.core.prefs
@@ -1,5 +1,5 @@
-#Fri Feb 24 21:54:54 CET 2012
-analyseLocally=true
+#Sun Mar 04 14:38:07 CET 2012
+analyseLocally=false
 eclipse.preferences.version=1
 projectArtifactId=core
 projectBranch=
