(Re-)Add Presentation Core module (base classes to create a JavaFX2  slides presentation)

--- a/org.jrebirth/pom.xml
+++ b/org.jrebirth/pom.xml
@@ -29,6 +29,7 @@
 		<module>analyzer</module>
 		<module>archetype</module>
 		<module>distribution</module>
+		<module>presentation</module>
 	</modules>
 
 	<issueManagement>
