--- a/org.jrebirth/analyzer/pom.xml
+++ b/org.jrebirth/analyzer/pom.xml
@@ -17,11 +17,11 @@
 			<artifactId>core</artifactId>
 			<version>0.6.0-SNAPSHOT</version>
 		</dependency>
-		<dependency>
+<!-- 		<dependency>
 			<groupId>com.oracle.javafx</groupId>
 			<artifactId>jfxrt</artifactId>
 			<scope>provided</scope>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 	<build>
 		<plugins>
