--- a/org.jrebirth/core/pom.xml
+++ b/org.jrebirth/core/pom.xml
@@ -12,12 +12,11 @@
 	<name>JRebirth Core Library</name>
 	<description>The Core library of the JRebirth Framework</description>
 
-	<dependencies>
+<!-- 	<dependencies>
 		<dependency>
 			<groupId>com.oracle.javafx</groupId>
 			<artifactId>jfxrt</artifactId>
-			<version>2.0.2</version>
-			<scope>provided</scope>
+			<version>2.1</version>
 		</dependency>
-	</dependencies>
+	</dependencies> -->
 </project>
