--- a/org.jrebirth/presentation/pom.xml
+++ b/org.jrebirth/presentation/pom.xml
@@ -43,11 +43,11 @@
 			<artifactId>core</artifactId>
 			<version>0.6.0-SNAPSHOT</version>
 		</dependency>
-		<dependency>
+<!-- 		<dependency>
 			<groupId>com.oracle.javafx</groupId>
 			<artifactId>jfxrt</artifactId>
-			<version>2.0.2</version>
+			<version>2.1</version>
 			<scope>provided</scope>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 </project>
