--- a/org.jrebirth/presentation/pom.xml
+++ b/org.jrebirth/presentation/pom.xml
@@ -43,11 +43,6 @@
 			<artifactId>core</artifactId>
 			<version>0.6.0-SNAPSHOT</version>
 		</dependency>
-<!-- 		<dependency>
-			<groupId>com.oracle.javafx</groupId>
-			<artifactId>jfxrt</artifactId>
-			<version>2.1</version>
-			<scope>provided</scope>
-		</dependency> -->
+		<!-- <dependency> <groupId>com.oracle.javafx</groupId> <artifactId>jfxrt</artifactId> <version>2.1</version> <scope>provided</scope> </dependency> -->
 	</dependencies>
 </project>
