--- a/org.jrebirth/transition/pom.xml
+++ b/org.jrebirth/transition/pom.xml
@@ -22,5 +22,11 @@
   		<artifactId>jfxrt</artifactId>
   		<version>2.1</version>
   	</dependency> -->
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.1</version>
+  		<scope>test</scope>
+  	</dependency>
   </dependencies>
 </project>
