--- a/org.jrebirth/presentation/pom.xml
+++ b/org.jrebirth/presentation/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>jrebirth</artifactId>
 		<groupId>org</groupId>
-		<version>0.6.0-SNAPSHOT</version>
+		<version>0.6.0</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<groupId>org.jrebirth</groupId>
@@ -41,7 +41,7 @@
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>core</artifactId>
-			<version>0.6.0-SNAPSHOT</version>
+			<version>0.6.0</version>
 		</dependency>
 		<!-- <dependency> <groupId>com.oracle.javafx</groupId> <artifactId>jfxrt</artifactId> <version>2.1</version> <scope>provided</scope> </dependency> -->
 	</dependencies>
