Improve Wave management
Add component module

--- a/org.jrebirth/pom.xml
+++ b/org.jrebirth/pom.xml
@@ -29,6 +29,7 @@
 
 	<modules>
 		<module>core</module>
+		<module>component</module>
 		<module>analyzer</module>
 		<module>archetype</module>
 		<module>distribution</module>
