--- a/org.jrebirth/pom.xml
+++ b/org.jrebirth/pom.xml
@@ -150,7 +150,7 @@
 			<plugin>
 				<groupId>org.codehaus.sonar</groupId>
 				<artifactId>sonar-maven3-plugin</artifactId>
-				<version>3.2.1-RC1</version>
+				<version>3.1.1</version>
 			</plugin>
 
 		</plugins>
