--- a/org.jrebirth/core/pom.xml
+++ b/org.jrebirth/core/pom.xml
@@ -12,4 +12,13 @@
 	<name>JRebirth Core Library</name>
 	<description>The Core library of the JRebirth Framework</description>
 
+
+	<dependencies>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.2</version>
+		</dependency>
+	</dependencies>
+
 </project>
