--- a/org.jrebirth/analyzer/pom.xml
+++ b/org.jrebirth/analyzer/pom.xml
@@ -11,47 +11,163 @@
 
 	<name>JRebirth Analyzer</name>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.jrebirth</groupId>
-			<artifactId>core</artifactId>
-			<version>0.7.0-SNAPSHOT</version>
-		</dependency>
-<!-- 		<dependency>
-			<groupId>com.oracle.javafx</groupId>
-			<artifactId>jfxrt</artifactId>
-			<scope>provided</scope>
-		</dependency> -->
-	</dependencies>
 	<build>
 		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.4</version>
 
+				<!-- <executions> <execution> <goals> <goal>sign</goal> </goals> </execution> </executions> -->
 				<configuration>
 					<archive>
+
 						<manifestEntries>
-							<!-- <JavaFX-Version>2.0</JavaFX-Version> -->
+							<JavaFX-Version>2.0</JavaFX-Version>
 							<Main-Class>org.jrebirth.analyzer.JRebirthAnalyzer</Main-Class>
 
-							<!-- implementation-vendor: I implementation-title: Jrebirth demo 
-								implementation-version: 1.0 JavaFX-Application-Class: org.jrebirth.demo.JRebirthDemo 
-								Created-By: Maven Packager Main-Class: com/javafx/main/Main -->
+
+							<implementation-vendor>seb</implementation-vendor>
+							<implementation-title>JRebirthAnalyzer</implementation-title>
+							<implementation-version>1.0</implementation-version>
+							<JavaFX-Application-Class>org.jrebirth.analyzer.JRebirthAnalyzer</JavaFX-Application-Class>
+
+							<JavaFX-Class-Path>${classpath}</JavaFX-Class-Path>
+							<!-- implementation-vendor: I implementation-title: Jrebirth demo implementation-version: 1.0 JavaFX-Application-Class: org.jrebirth.demo.JRebirthDemo Created-By: 
+								Maven Packager Main-Class: com/javafx/main/Main -->
 						</manifestEntries>
 						<manifest>
-							<!-- <addDefaultImplementationEntries>true</addDefaultImplementationEntries> 
-								<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries> -->
+							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
 							<addClasspath>true</addClasspath>
 
 						</manifest>
 					</archive>
+					<!-- <keystore>jrebirth.jks</keystore> <alias>jrebirth</alias> <storepass>gojava</storepass> <signedjar>${project.build.directory}/signed/${project.build.finalName}.jar</signedjar> 
+						<verify>true</verify> -->
+
 				</configuration>
 			</plugin>
 
+			<!-- <plugin> <artifactId>maven-assembly-plugin</artifactId> <configuration> <archive> <manifest> <mainClass>org.jrebirth.presentation.Presentation</mainClass> 
+				</manifest> </archive> <descriptorRefs> <descriptorRef>jar-with-dependencies</descriptorRef> </descriptorRefs> </configuration> <executions> <execution> <id>make-my-jar-with-dependencies</id> 
+				<phase>package</phase> <goals> <goal>single</goal> </goals> </execution> </executions> </plugin> -->
+
+
+			<plugin>
+
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>webstart-maven-plugin</artifactId>
+				<version>1.0-beta-3</version>
+
+				<!-- do not bind to install phase - - > <executions> <execution> <goals> <goal>package</goal> </goals> </execution> </executions> -->
+
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>jnlp</goal> <!-- use jnlp, jnlp-inline or jnlp-single as appropriate -->
+						</goals>
+					</execution>
+				</executions>
+
+				<configuration>
+					<!--outputDirectory></outputDirectory --> <!-- not required?? -->
+
+					<!-- Set to true to exclude all transitive dependencies. Default is false. -->
+					<excludeTransitive>false</excludeTransitive>
+
+					<!-- The path where the libraries are stored within the jnlp structure. not required. by default the libraries are within the working directory -->
+					<libPath>lib</libPath>
+
+					<!-- [optional] transitive dependencies filter - if omitted, all transitive dependencies are included -->
+					<!-- <dependencies> Note that only groupId and artifactId must be specified here. because of a limitation of the Include/ExcludesArtifactFilter <includes> <include>org.jrebirth:presentation</include> 
+						<include>org.jrebirth:core</include> </includes> excludes> <exclude></exclude> <excludes </dependencies> -->
+
+					<!--resourcesDirectory>${project.basedir}/src/main/jnlp/resources</resourcesDirectory --> <!-- default value -->
+
+					<!-- JNLP generation -->
+					<jnlp>
+						<!-- default values -->
+						<!--inputTemplateResourcePath>${project.basedir}</inputTemplateResourcePath -->
+						<inputTemplate>src/main/jnlp/template.vm</inputTemplate> <!-- relative to inputTemplateResourcePath -->
+						<outputFile>JRebirthAnalyzer.jnlp</outputFile> <!-- defaults to launch.jnlp -->
+
+						<!-- used to automatically identify the jar containing the main class. -->
+						<!-- this is perhaps going to change -->
+						<mainClass>org.jrebirth.analyzer.JRebirthAnalyzer</mainClass>
+					</jnlp>
+
+
+					<!-- SIGNING -->
+					<!-- defining this will automatically sign the jar and its dependencies, if necessary -->
+					<sign>
+						<keystore>${basedir}/jrebirth.jks</keystore>
+						<keypass>gojava</keypass>  <!-- we need to override passwords easily from the command line. ${keypass} -->
+						<storepass>gojava</storepass> <!-- ${storepass} -->
+						<!--storetype>fillme</storetype -->
+						<alias>jrebirth</alias>
+
+						<!--validity>fillme</validity -->
+
+						<!-- only required for generating the keystore -->
+						<dnameCn>fillme</dnameCn>
+						<dnameOu>fillme</dnameOu>
+						<dnameO>fillme</dnameO>
+						<dnameL>fillme</dnameL>
+						<dnameSt>fillme</dnameSt>
+						<dnameC>fillme</dnameC>
+
+						<verify>true</verify> <!-- verify that the signing operation succeeded -->
+
+						<!-- KEYSTORE MANAGEMENT -->
+						<!-- <keystoreConfig> <delete>true</delete> delete the keystore <gen>true</gen> optional shortcut to generate the store. </keystoreConfig> -->
+					</sign>
+
+					<!-- BUILDING PROCESS -->
+
+					<pack200>false</pack200>
+					<gzip>false</gzip> <!-- default force when pack200 false, true when pack200 selected ?? -->
+
+					<!-- causes a version attribute to be output in each jar resource element, optional, default is false -->
+					<!-- <outputJarVersions>true</outputJarVersions> -->
+
+					<!--install>false</install --> <!-- not yet supported -->
+					<verbose>true</verbose>
+
+				</configuration>
+			</plugin>
 		</plugins>
 
+
+
 	</build>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.jrebirth</groupId>
+			<artifactId>core</artifactId>
+			<version>0.7.0-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.0.6</version>
+		</dependency>
+		
+	</dependencies>
+	
 </project>
