--- a/org.jrebirth/pom.xml
+++ b/org.jrebirth/pom.xml
@@ -95,9 +95,18 @@
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
+<!-- 					<compilerArguments>
+        				<bootclasspath>${java.home}/lib/rt.jar:${java.home}/lib/jfxrt.jar</bootclasspath>
+					</compilerArguments> -->
 				</configuration>
 			</plugin>
 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.3.2</version>
+			</plugin>
+			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
@@ -127,7 +136,7 @@
 				<configuration>
 					<bootclasspath>${java.home}/lib/rt.jar:${java.home}/lib/jfxrt.jar</bootclasspath>
 					<links>
-						<link>http://download.oracle.com/javafx/2.0/api/</link>
+						<link>http://docs.oracle.com/javafx/2/api/</link>
 					</links>
 					<failOnError>true</failOnError>
 				</configuration>
