--- a/org.jrebirth/pom.xml
+++ b/org.jrebirth/pom.xml
@@ -103,6 +103,10 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.3.2</version>
+				<configuration>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+					<preparationGoals>clean install</preparationGoals>
+				</configuration>
 			</plugin>
 
 			<plugin>
