add jfxrt.jar for test

--- a/org.jrebirth/pom.xml
+++ b/org.jrebirth/pom.xml
@@ -146,6 +146,15 @@
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12</version>
+				<configuration>
+					<additionalClasspathElements>${java.home}/lib/rt.jar:${java.home}/lib/jfxrt.jar</additionalClasspathElements>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
 				<version>3.0</version>
 				<dependencies>
