--- a/org.jrebirth/pom.xml
+++ b/org.jrebirth/pom.xml
@@ -149,7 +149,9 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.12</version>
 				<configuration>
-					<additionalClasspathElements>${java.home}/lib/rt.jar:${java.home}/lib/jfxrt.jar</additionalClasspathElements>
+					<additionalClasspathElements>
+						<additionalClasspathElement>${java.home}/lib/rt.jar:${java.home}/lib/jfxrt.jar</additionalClasspathElement>
+					</additionalClasspathElements>
 				</configuration>
 			</plugin>
 
@@ -157,6 +159,11 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
 				<version>3.0</version>
+<!-- 				<configuration>
+					<additionalClasspathElements>
+						<additionalClasspathElement>${java.home}/lib/rt.jar:${java.home}/lib/jfxrt.jar</additionalClasspathElement>
+					</additionalClasspathElements>
+				</configuration> -->
 				<dependencies>
 					<dependency>
 						<groupId>org.apache.maven.wagon</groupId>
@@ -184,9 +191,11 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.9</version>
 				<configuration>
+					<bootclasspath>${java.home}/lib/rt.jar:${java.home}/lib/jfxrt.jar</bootclasspath>
 					<links>
-						<link>http://download.oracle.com/javafx/2.0/api/</link>
+						<link>http://docs.oracle.com/javafx/2/api/</link>
 					</links>
+					<failOnError>true</failOnError>
 				</configuration>
 			</plugin>
 		</plugins>
