[maven-release-plugin] prepare release jrebirth-0.7.1

--- a/org.jrebirth/transition/pom.xml
+++ b/org.jrebirth/transition/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>jrebirth</artifactId>
     <groupId>org</groupId>
-    <version>0.7.1-SNAPSHOT</version>
+    <version>0.7.1</version>
     <relativePath>..</relativePath>
   </parent>
   <groupId>org.jrebirth</groupId>
@@ -14,7 +14,7 @@
   	<dependency>
   		<groupId>org.jrebirth</groupId>
   		<artifactId>core</artifactId>
-  		<version>0.7.1-SNAPSHOT</version>
+  		<version>0.7.1</version>
   	</dependency>
   	
   	<dependency>
